# VerseVault

./: CMakeLists.txt  LICENSE  README.md  client.cpp  db.c  db2.c  libreria.db  libreria.sqbpro  libreria.sqlite  main.c  main.cpp  menu.c  menu.h  server.cpp
.github/workflows/: main.yml
ProgIV/: CMakeLists.txt  descargaArchivos.h  main.cpp
ProgIV/database/: db2.cpp  db2.h  volcarPaisCiudad.c
ProgIV/include/openssl/: x509.h
ProgIV/structs/: autor.h  ciudad.h  pais.h
VerseVault-Curl/.github/workflows/: main.yml
VerseVault-Curl/ProgIV/ficheros/: Paises_Limpios.csv
VerseVault-Curl/ProgIV/menu/: menu.cpp  menu.h
VerseVault-Curl/ProgIV/structs/: libreria.h  stock.h  terminado.h
curly/: descargaArchivos.cpp  descargaArchivos.h
database/: db.c  db2.c  db2.cpp  db2.h  dbBusqueda.c  dbBusqueda.cpp  dbBusqueda.h  totalVolcado.c  volcadoDB.c  volcarLibrerias.c
ficheros/: Municipios_Limpios.csv  librerias-1.csv
libros/: Blix.txt  Cranford.txt  Elaine.txt  O Pioneers!.txt  Paradise Lost.txt  The Jungle.txt  The Lost Continent.txt  Violists.txt
menu/: menu.c  menu.cpp  menu.h
sockets/ClientSocket/: client.cpp  main.c
sockets/ServerSocket/: main.c  server.cpp
sockets2/ClientWithProtocol/: client.h  main.c  main.cpp
sockets2/ServerWithProtocol/: main.c  main.cpp
structs/: cliente.h  genero.h  generos.h  libreria.h  libro.h  progreso.h
window/: window.cpp  window.h
